[gd_scene load_steps=4 format=3 uid="uid://bch2undeeqhje"]

[ext_resource type="Script" path="res://Scenes/AppBar/Scripts/scene_scroll_button_bar.gd" id="1_tdv3l"]
[ext_resource type="Theme" uid="uid://cfefgu8jbb3xm" path="res://Resources/Styles/default_theme.tres" id="1_yhki2"]
[ext_resource type="PackedScene" uid="uid://cnb44mjrsn3rh" path="res://Scenes/AppBar/scene_button.tscn" id="3_b3p5b"]

[node name="SceneScrollButtonBar" type="Control"]
custom_minimum_size = Vector2(0, 57)
layout_mode = 3
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 6
size_flags_vertical = 6
mouse_filter = 1
theme = ExtResource("1_yhki2")
script = ExtResource("1_tdv3l")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme = ExtResource("1_yhki2")
color = Color(0, 0, 0, 1)

[node name="ScrollContainer" type="ScrollContainer" parent="ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
theme = ExtResource("1_yhki2")
horizontal_scroll_mode = 3
vertical_scroll_mode = 0

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("1_yhki2")

[node name="HBoxContainer" type="HBoxContainer" parent="ColorRect/ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("1_yhki2")

[node name="SettingsButton" parent="ColorRect/ScrollContainer/VBoxContainer/HBoxContainer" instance=ExtResource("3_b3p5b")]
layout_mode = 2
size_flags_horizontal = 3

[node name="HistoryButton" parent="ColorRect/ScrollContainer/VBoxContainer/HBoxContainer" instance=ExtResource("3_b3p5b")]
layout_mode = 2
size_flags_horizontal = 3
scene_enum = 1

[node name="SimpleRollButton" parent="ColorRect/ScrollContainer/VBoxContainer/HBoxContainer" instance=ExtResource("3_b3p5b")]
layout_mode = 2
size_flags_horizontal = 3
scene_enum = 2

[node name="CustomRollButton" parent="ColorRect/ScrollContainer/VBoxContainer/HBoxContainer" instance=ExtResource("3_b3p5b")]
layout_mode = 2
size_flags_horizontal = 3
scene_enum = 3

[node name="SavedRollButton" parent="ColorRect/ScrollContainer/VBoxContainer/HBoxContainer" instance=ExtResource("3_b3p5b")]
layout_mode = 2
size_flags_horizontal = 3
scene_enum = 4

[node name="SyncedScrollBar" type="HScrollBar" parent="ColorRect/ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 5)
layout_mode = 2
size_flags_vertical = 4
mouse_filter = 2
theme = ExtResource("1_yhki2")
